test/corpus/call_statement.txt
===
Simple call statement
===

func_call()
            
---

(source_file
  (expression_statement
      (call_expression
        function: (identifier))))

===
Simple call statement - Semicolon
===

func_call();
            
---

(source_file
  (expression_statement
      (call_expression
        function: (identifier))))

===
Call statement - ancestor event
===

call w_emp::Open

---

(source_file
  (call_statement
    ancestor_object: (identifier)
    event: (identifier)))

===
Call statement - ancestor control event
===

call w_emp`cb_close::Clicked

---

(source_file
  (call_statement
    ancestor_object: (identifier)
    control_name: (identifier)
    event: (identifier)))
