test/corpus/choose_case_statement.txt
===
CHOOSE CASE simple
===

choose case weight
    case is < 16
        postage = weight * 0.30
    case 16 to 48
        postage = 4.50
    case else
        postage = 25.00
end choose

---

(source_file
  (choose_statement
    value: (identifier)
    (case_clause
      conditions: (case_expression_list
        (case_expression
          (partial_relational_expression
              (number))))
      (expression_statement
          (assignment_expression
            left: (identifier)
            right: (binary_expression
              left: (identifier)
              right: (number)))))
    (case_clause
      conditions: (case_expression_list
        (case_expression
          (range_expression
            (number)
            (number))))
      (expression_statement
          (assignment_expression
            left: (identifier)
            right: (number))))
    (case_else_clause
      (expression_statement
          (assignment_expression
            left: (identifier)
            right: (number))))))
