test/corpus/goto_statement.txt
===
Simple GOTO statement
===

label:
goto label
goto label;

---

(source_file
    (label_statement
        name: (identifier))
    (goto_statement
        label: (identifier))
    (goto_statement
        label: (identifier)))
