test/corpus/loop_statement.txt
===
Simple DO UNTIL...LOOP Statement
===

do until a = 10
    a = a + 1
loop

---

(source_file
  (loop_statement
    condition: (binary_expression
        left: (identifier)
        right: (number))
    body: (expression_statement
        (binary_expression
          left: (identifier)
          right: (binary_expression
              left: (identifier)
              right: (number))))))

===
Simple DO WHILE...LOOP Statement
===

do while a = 10
    a = a + 1
loop

---

(source_file
  (loop_statement
    condition: (binary_expression
        left: (identifier)
        right: (number))
    body: (expression_statement
        (binary_expression
          left: (identifier)
          right: (binary_expression
              left: (identifier)
              right: (number))))))

===
Simple DO...LOOP UNTIL Statement
===

do
    a = a + 1
loop until a = 10

---

(source_file
  (loop_statement
    body: (expression_statement
        (binary_expression
          left: (identifier)
          right: (binary_expression
              left: (identifier)
              right: (number))))
    condition: (binary_expression
                left: (identifier)
                right: (number))))

===
Simple DO...LOOP WHILE Statement
===

do
    a = a + 1
loop while a = 10

---

(source_file
    (loop_statement
        body: (expression_statement
            (binary_expression
                left: (identifier)
                right: (binary_expression
                    left: (identifier)
                    right: (number))))
        condition: (binary_expression
                left: (identifier)
                right: (number))))
