test/corpus/try_statement.txt
===
Simple TRY...CATCH...END TRY Statement
===

try
  doSomething()
catch (IOException e)
  log(e.message)
end try

---

(source_file
    (try_statement
        (expression_statement
            (call_expression
                (identifier)))
        (catch_clause
            (identifier)
            (identifier)
            (expression_statement
                (call_expression
                    (identifier)
                    (member_expression
                        (identifier)
                    (identifier)))))))

===
Simple TRY...CATCH...FINALLY...END TRY Statement
===

try
  doSomething()
catch (IOException e)
  log(e.message)
finally
  cleanup()
end try

---

(source_file
    (try_statement
        (expression_statement
            (call_expression
                (identifier)))
        (catch_clause
            (identifier)
            (identifier)
            (expression_statement
                (call_expression
                    (identifier)
                    (member_expression
                        (identifier)
                (identifier)))))
        (finally_clause
          (expression_statement
            (call_expression
              (identifier))))))
